fix: center align popover arrrow

--- a/src/assets/styles/_popover.scss
+++ b/src/assets/styles/_popover.scss
@@ -116,6 +116,7 @@
         margin-top: 0.5rem;
     
         .arrow {
+            left: 45% !important;
             top: calc((0.5rem + 1px) * -1);
         }
     
